# llm-testing

./: .gitignore  AGENTS.md  CLAUDE.md  DESLOP_EXPERIMENT_NOTES.md  GETTING-STARTED.md  LOCAL-INFERENCE-MODEL-SIZING.md  PRD-LLM-LEARNING-LAB.json  QUESTIONS.md  README.md  TRAINING-GUIDE.md  VISION.md  gpt52xhigh-review.md  pretraining-chat-ralph.txt  progress.txt  pyproject.toml  ralph-loop-done-chat.txt  run-dashboard.sh  unsloth_finetune_design_v2-refined.md
.claude/: ralph-loop.local.md
.old_docs/: unsloth_finetune_design_v2.md
api/: __init__.py  config.py  main.py
api/routers/: __init__.py  attention.py  education.py  fine_tuning.py  pretraining.py  probing.py
api/services/: __init__.py  model_manager.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css
docs/: HARDWARE-DECISION.md  RETROSPECTIVE.md  microgpt_line_by_line.md
docs/CURRENT/: IMPLEMENTATION_TODO.md  PROJECT_OVERVIEW_AND_DIRECTIONS.md  directions.md
docs/book-chapters/: REFERENCE.md
docs/concepts/: TEMPLATE.md  attention-self-assessment.md  loss-curves.md  qlora.md  representations-self-assessment.md  training-dynamics-self-assessment.md
docs/papers/: bayesian-geometry-attention.md
experiments/: EXPERIMENT_TEMPLATE.py  __init__.py
experiments/attention/: __init__.py  base_vs_finetuned.md  compare_experiment.py  extract.py  visualize.py
experiments/fine_tuning/: __init__.py  basic_qlora.py  loss_curve_analysis.py
qwen-finetune/: first_implementation_session.txt  pyproject.toml
ralph/: RALPH-INTERVIEW.md  RALPH-LOOP-PROMPT.md
(+125 files in other folders)
